<resources>
    <string name="app_name">PFSQLite</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_email">Email</string>
    <string name="txt_fecNac">Fecha de nacimiento</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="txt_telefono">Telefono</string>
    <string name="txt_id">ID</string>
    <string name="btn_agregar">Agregar</string>
</resources>
