<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContacto">

    <EditText
        android:id="@+id/txtadd_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txt_usuario"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtadd_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtadd_usuario" />

    <EditText
        android:id="@+id/txtadd_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txt_telefono"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtadd_email" />

    <EditText
        android:id="@+id/txtadd_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/txt_fecNac"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtadd_telefono" />

    <Button
        android:id="@+id/btnadd_guardar"
        android:layout_width="266dp"
        android:layout_height="66dp"
        android:layout_marginTop="80dp"
        android:onClick="OnClick"
        android:text="@string/btn_guardar"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtadd_fecha" />


</androidx.constraintlayout.widget.ConstraintLayout>